# wego-devops

./: .env  .gitignore  Cargo.toml  READEME.md  README.md  dev.sh  package.json
.cargo/: config.toml
src/: main.rs  serializer.rs  settings.rs
src/controllers/: chathub.rs  health.rs  mod.rs  project.rs
src/repository/: mod.rs  project.rs  store.rs
web/: .env  .env.development  .env.production  index.html  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.vue  main.ts
web/src/api/: VueAxios.ts  VueSocket.ts  index.ts  model.ts  project.ts  server.ts
web/src/components/: CodeEditor.vue
web/src/layouts/: BasicLayout.vue
web/src/layouts/components/: Breadcrumb.vue  Menu.vue
web/src/router/: const-routes.ts  index.ts  typing.ts
web/src/views/project/: List.vue  Log.vue  Save.vue  index.ts
web/src/views/server/: List.vue  Save.vue
web/types/: env.d.ts
wego-devops/: Cargo.toml
wego-devops/src/: main.rs  result.rs  serializer.rs  settings.rs  store.rs
wego-devops/src/controllers/: health.rs  mod.rs  project.rs  server.rs  static_service.rs
wego-devops/src/events/: dispatcher.rs  mod.rs  ws.rs
wego-devops/src/services/: group.rs  mod.rs  project.rs  server.rs  ssh.rs
