[package]
name = "wego-devops"
edition = "2021"
version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
dirs.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

